--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Deploy Develop to Heroku dev env
           command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git develop
   deploy-release:
     docker:
       - image: buildpack-deps:trusty
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Deploy Release to Heroku rel env
           command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_REL.git master
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_REL.git release
   deploy-prod:
     docker:
       - image: buildpack-deps:trusty
