--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,12 +40,15 @@ jobs:
       # see https://hub.docker.com/r/circleci/node/tags/
       - image: circleci/node:8-browsers
     steps:
+      # Restore local dependencies from cache
+      - restore_cache:
+          key: angular-test-deploy-{{ .Branch }}-{{ checksum "package-lock.json" }}
       # Build project with different configuration based on
       # the current branch
       - run:
           name: Building
           command: |
-              if [ "${CIRCLE_BRANCH}" == "staging" ]; then
+              if [ "${CIRCLE_BRANCH}" == "release" ]; then
                   npm run build-qa
               elif [ "${CIRCLE_BRANCH}" == "master" ]; then
                   npm run build-prod
