--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-dev": "ng build --target=development --environment=dev",
+    "build-dev": "ng build --target=development --env=dev",
     "build-qa": "ng build --target=production --environment=qa",
     "build-prod": "ng build --prod",
     "heroku-postbuild": "ng build --prod"
