--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-dev": "ng build --target=development --env=dev",
-    "build-qa": "ng build --target=production --environment=qa",
+    "build-dev": "ng build",
+    "build-qa": "ng build",
     "build-prod": "ng build --prod",
     "heroku-postbuild": "ng build --prod"
   },
