--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,14 +78,15 @@ jobs:
       # Restore local dependencies from cache
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - command: |
-          cd /home/circleci/angular-test-deploy/dist
-          git config user.email "toto@gmail.com"
-          git config user.name "Deployment Bot"
-          git init
-          git add .
-          git commit -m "initial"
-          git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
+      - run:
+          command: |
+            cd /home/circleci/angular-test-deploy/dist
+            git config user.email "toto@gmail.com"
+            git config user.name "Deployment Bot"
+            git init
+            git add .
+            git commit -m "initial"
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_DEV.git master
   deploy-qa:
     docker:
       - image: buildpack-deps:trusty
